@@ -25,9 +25,9 @@
 ;;; Code:
 
 (define-module (gnome glib)
+  :use-module (gnome gobject)
   :use-module (gnome gw glib)
   :use-module (gnome gw gobject)
-  :use-module (gnome gobject)
   :use-module (gnome gobject gw-utils)
   :use-module (oop goops)
 
